[metadata]
name = vimeotools
version = 0.0.1
author = Georg Pfolz
author_email = georg.pfolz@invesy.at
description = Tools for Vimeo
long_description = file: README.md,HISTORY.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE.txt
url = https://gitlab.com/Rastaf/invesytoolbox
project_urls =
    Bug Tracker = https://gitlab.com/Rastaf/invesytoolbox/-/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PyVimeo

[options.packages.find]
where = src
